<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">android_tip_calc</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ten_percent">10%</string>
    <string name="fifteen_percent">15%</string>
    <string name="twenty_percent">20%</string>
    <string name="tip_amount">Tip is:</string>
    <string name="amountTV">Enter amount</string>

</resources>
