<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/fifteenBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="fifteenTip"
        android:text="@string/fifteen_percent" />

    <Button
        android:id="@+id/twentyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/fifteenBtn"
        android:layout_alignBottom="@+id/fifteenBtn"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/fifteenBtn"
        android:onClick="twentyTip"
        android:text="@string/twenty_percent" />

    <Button
        android:id="@+id/tenBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="16dp"
        android:layout_toLeftOf="@+id/fifteenBtn"
        android:onClick="tenTip"
        android:text="@string/ten_percent" />

    <TextView
        android:id="@+id/tvTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="77dp"
        android:text="@string/tip_amount"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/etTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tenBtn"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/twentyBtn"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/amountTV" >

        <requestFocus />
    </EditText>

</RelativeLayout>
